# composite-mvt

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README_CN.md
.agents/skills/gitnexus/gitnexus-cli/: SKILL.md
docs/superpowers/plans/: 2026-07-18-composite-mvt-v1.md  2026-07-19-maplibre-e2e.md  2026-07-21-maplibre-async-backend.md
docs/superpowers/specs/: 2026-07-18-composite-mvt-design.md  2026-07-19-maplibre-e2e-design.md  2026-07-21-maplibre-async-backend-design.md
e2e/: maplibre.spec.ts  package-lock.json  package.json  playwright.config.ts
examples/: generate_maplibre_fixtures.rs  maplibre_server.rs  mixed_sources.rs
examples/maplibre/: app.js  index.html  maplibre-gl.js
examples/maplibre/fixtures/: README.md  buildings.pbf  roads.pbf
examples/maplibre/fixtures/open/1/0/: 0.pbf  1.pbf
examples/maplibre/fixtures/open/1/1/: 0.pbf  1.pbf
examples/maplibre/fixtures/open/2/1/: 0.pbf  1.pbf  2.pbf
examples/maplibre/fixtures/open/2/2/: 0.pbf  1.pbf  2.pbf
examples/maplibre/fixtures/open/2/3/: 0.pbf  1.pbf  2.pbf
examples/maplibre/fixtures/open/3/3/: 2.pbf  3.pbf  4.pbf
examples/maplibre/fixtures/open/3/4/: 2.pbf  3.pbf  4.pbf
examples/maplibre/fixtures/open/3/5/: 2.pbf  3.pbf  4.pbf
examples/maplibre/fixtures/open/4/7/: 4.pbf  5.pbf  6.pbf
examples/maplibre/fixtures/open/4/8/: 4.pbf  5.pbf  6.pbf
examples/maplibre/fixtures/open/4/9/: 4.pbf  5.pbf  6.pbf
examples/maplibre/fixtures/open/5/15/: 13.pbf  14.pbf  15.pbf
examples/maplibre/fixtures/open/5/16/: 13.pbf  14.pbf  15.pbf
examples/maplibre/fixtures/open/5/17/: 13.pbf  14.pbf  15.pbf
examples/maplibre/styles/: maplibre-gl.css
examples/maplibre_server/: assets.rs  http.rs  state.rs  tests.rs
src/: builder.rs  composer.rs  compression.rs  duplicate_layer.rs  error.rs  lib.rs  source.rs
src/compression/: tests.rs
tests/: builder_validation.rs  composition.rs  source_parsing.rs
tests/common/: mod.rs
tests/composition/: concurrency.rs  e2e.rs  fixtures.rs
