[package]
name = "composite-mvt"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
description = "Compose fixed Mapbox Vector Tile sources with optional input and output compression"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/composite-mvt"
keywords = ["mvt", "mapbox", "vector-tile", "tiles", "geospatial"]
categories = ["compression", "data-structures", "encoding"]
include = [
    "Cargo.toml",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "README.md",
    "CHANGELOG.md",
    "src/**",
    "tests/**",
    "examples/**",
]

[dependencies]
bytes = "1"
thiserror = "2"
fast-mvt = { version = "0.6.0", default-features = false, features = ["reader"] }
flate2 = { version = "1.1.9", optional = true }
zstd = { version = "0.13.3", optional = true }
brotli = { version = "8.0.4", optional = true }

[dev-dependencies]
fast-mvt = { version = "0.6.0", default-features = false, features = ["reader", "writer"] }

[features]
default = ["gzip"]
gzip = ["dep:flate2"]
zstd = ["dep:zstd"]
brotli = ["dep:brotli"]
